--- a/api-php/.env
+++ b/api-php/.env
@@ -5,10 +5,10 @@ DB_PASS=
 JWT_SECRET=57VZok7RCkLdi0IGV4iDLRHmOcZU3Sed0GMjr5egCZc=
 SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
-SMTP_USERNAME=pedromedeirosetec02@gmail.com
-SMTP_PASSWORD="qpwj ekmy jsia afnk"
+SMTP_USERNAME=happyidosos@gmail.com
+SMTP_PASSWORD="HappyIdosos123"
 SMTP_FROM_NAME="Happy Idosos"
-SMTP_FROM_EMAIL=pedromedeirosetec02@gmail.com
+SMTP_FROM_EMAIL=happyidosos@gmail.com
 SMTP_SECURE=tls
 
 
