--- a/api-php/.env
+++ b/api-php/.env
@@ -1,9 +1,8 @@
-
 DB_HOST=localhost
 DB_NAME=happy_idosos
-DB_USER=root
-DB_PASS=
-
+DB_USER=happyidosos_user
+DB_PASS=senha_segura_123
+APP_ENV=production
 
 JWT_SECRET=57VZok7RCkLdi0IGV4iDLRHmOcZU3Sed0GMjr5egCZc=
 
